Java 11 compatibility (#442)
* Use Class.getConstructor().getInstance().

Rather than JDK11-deprecated Class.getInstance().

* Warning fixes.

* Bump Jersey version.

Looks like it improves JDK11 compatibility.